@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinX.c,v 1.67 2010/09/10 08:59:26 nijtmans Exp $
+ * RCS: @(#) $Id: tkWinX.c,v 1.68 2010/09/13 08:11:59 nijtmans Exp $
  */
 
 /* TODO: This file does not compile in UNICODE mode.
@@ -18,14 +18,6 @@
  */
 #undef UNICODE
 #undef _UNICODE
-
-/*
- * Make sure the SendInput API is available (NT SP 3):
- */
-#if (_WIN32_WINNT <= 0x0400)
-#undef _WIN32_WINNT
-#define _WIN32_WINNT 0x0403
-#endif
 
 #include "tkWinInt.h"
 
